# model-context-protocol

./: .gitignore  README.md  mcp.json  pyproject.toml
client/: mcp_client.py
internet_usage/: __init__.py  internet_mcp_server.py  internet_usage_resource.py
weather/: __init__.py  weather_mcp_server.py  weather_tool.py
